DSL/DiversiaScript/test/neg/operators.div
def TestObject {}
def TestObject2 {}

on Create() {
	var mInt : Int = 1;
	var mBool : Bool = false;
	var mVector3 : Vector3 = [1, 2, 3];

	// All of the following operators should produce an error.
	// Undefined operators on basic types.
	1 * true;	
	true - 1++;
	true + false;
	"test" / "test";
	-true;
	-1 * "test" + false - true;
	--++"test"++;
	1.0 == false;
	!1 && !false || "lol";
	!"false";
	
	// Undefined operators on builtin types.
	1 * Mode.Client; // TODO: Since an enum value is basically an integer, allow this?
	[1, 2, 3] / [1, 2, 3, 4];
	--Radian(50) * --Degree(50);
	1 * [1, 2, 3];
	[1, 2] && [3, 4];
	[1, 2] || "test" || Radian(42);
	[1, 2] == [1, 2, 3];
	Radian(1337) == true || false;
	true != ![1, 2];
	Radian(42) != Degree(42);
	[1, 2] && ([2, 3] || [4, 5]);
	
	// Undefined operators on object types.
	new TestObject {} + new TestObject2 {};
	new TestObject {} == new TestObject2 {};
	new TestObject {} && new TestObject2 {};
}